--- a/scss/mystyle.scss
+++ b/scss/mystyle.scss
@@ -258,7 +258,7 @@ table {
 
 @media screen and (min-width: 320px) {
     .chartspacing {
-        padding-left: 20px;
+        padding-left: 0px;
         padding-right: 160px;
         //width: 600px;
         h4 {
@@ -564,7 +564,7 @@ table {
         width: 25%;
     }
     .comparison-container {
-        float: right;
+        // float: right;
         padding-right: 350px;
     }
     .shift-spacing {
@@ -674,6 +674,6 @@ table {
         width: 15%;
     }
     .big-container {
-        margin-left: 350px;
+        // margin-left: 350px;
     }
 }
